# metaparse

./: .clang-format  .gitignore  ASTBase.h  CMakeLists.txt  main.cpp  meta.h  metafunction.h
include/logic/: axiom.h  boolean.h  constant.h  expression.h  operators.h  set.h  statement.h  value.h  variable.h
include/meta/: attribute.h  concepts.h  metavalue.h  rtti.h  traits.h
include/util/: atomic_ref.h
test/: run_tests.cpp  test_defs.inl
test/meta/: concepts.ii
